# epubforge

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
cli/: package.json
cli/src/: index.ts
core/: README.md  package.json
core/src/: index.ts
core/src/crawler/: PlaywrightCrawler.ts
core/src/extractor/: ArticleExtractor.ts
core/src/html/: HtmlCleaner.test.ts
core/src/metadata/: MetadataExtractor.test.ts
core/src/readability/: ReadabilityParser.test.ts
core/src/utils/: mimeType.test.ts  mimeType.ts  slugify.test.ts  tempDir.test.ts
desktop/: index.html  package.json  vite.config.ts
desktop/sidecar/: index.mjs  prod.cjs
desktop/sidecar/assets/: styles.css
desktop/src/: App.css  App.tsx  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: GenerateButton.css  GenerateButton.tsx  SettingsButton.css  SettingsButton.tsx  SettingsModal.css  SettingsModal.tsx  StatusCard.css  StatusCard.tsx  UrlInput.css  UrlInput.tsx
desktop/src/hooks/: useSettings.ts
src/cli/: index.ts
src/crawler/: PlaywrightCrawler.ts
src/epub/: EpubBuilder.ts
src/extractor/: MediumImporter.ts  types.ts
src/html/: HtmlCleaner.ts  HtmlNormalizer.ts  ImageDownloader.ts
src/metadata/: MetadataExtractor.ts
src/readability/: ReadabilityParser.ts
src/types/: index.ts
src/utils/: logger.ts  slugify.ts  tempDir.ts
(+6 files in other folders)
